# AI-Enabled-Data-Engineering-Pipeline-for-Predictive-Analytics

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: pipeline.yaml
configs/schemas/: assessments.yaml  student_info.yaml  student_vle.yaml
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  USER_MANUAL.md
notebooks/: 01_eda.ipynb  02_model_training.ipynb  03_shap_analysis.ipynb
scripts/: download_oulad.py  generate_synthetic.py  run_pipeline.py  run_pipeline.sh
src/: __init__.py
src/evaluation/: __init__.py  cross_validation.py  drift.py  metrics.py
src/explainability/: shap_explainer.py
src/features/: __init__.py  encoders.py  factory.py  registry.py
src/ingestion/: __init__.py  base.py  csv_adapter.py  kafka_adapter.py
src/models/: __init__.py  base.py  lightgbm_trainer.py  lstm_trainer.py  xgboost_trainer.py
src/preprocessing/: __init__.py  cleaner.py  dedup.py  schema.py
src/serving/: __init__.py  app.py  schemas.py
src/spark_jobs/: __init__.py  feature_pipeline.py
src/utils/: __init__.py  config.py  io.py  logging.py  spark.py
tests/: conftest.py  test_api.py  test_features.py  test_metrics.py  test_preprocessing.py
