[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-predictive-pipeline"
version = "1.0.0"
description = "AI-enabled data engineering pipeline for predictive analytics in education"
authors = [{name = "Siva Prasath M"}]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
